; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/resctrl/extr_pseudo_lock.c_pseudo_lock_devnode.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/resctrl/extr_pseudo_lock.c_pseudo_lock_devnode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.rdtgroup = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"pseudo_lock/%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.device*, i32*)* @pseudo_lock_devnode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @pseudo_lock_devnode(%struct.device* %0, i32* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.rdtgroup*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.device*, %struct.device** %3, align 8
  %7 = call %struct.rdtgroup* @dev_get_drvdata(%struct.device* %6)
  store %struct.rdtgroup* %7, %struct.rdtgroup** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  store i32 384, i32* %11, align 4
  br label %12

12:                                               ; preds = %10, %2
  %13 = load i32, i32* @GFP_KERNEL, align 4
  %14 = load %struct.rdtgroup*, %struct.rdtgroup** %5, align 8
  %15 = getelementptr inbounds %struct.rdtgroup, %struct.rdtgroup* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i8* @kasprintf(i32 %13, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %18)
  ret i8* %19
}

declare dso_local %struct.rdtgroup* @dev_get_drvdata(%struct.device*) #1

declare dso_local i8* @kasprintf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
